# E-commerce

./: .env.sample  Dockerfile  Dockerfile.dev  alembic.ini  docker-compose.dev.yml  domain.py  notes.txt  pyproject.toml  pytest.ini  raw.sql
alembic/: env.py
alembic/versions/: 092e866fe236_added_users_and_user_identities_tables.py  0eb7f3b3c687_added_staff_invitations_table.py  3ff4a55c768f_added_invitation_code_field.py  43960da63789_init.py  61a38c297f7b_unique_company_name_field.py  633fa8eb55fe_init.py  68d655c6e920_status_field_to_staff_invitation.py  79816346d773_uq_on_seller_staff_table.py  97e01f7a85d8_init.py  a29b79f72335_added_is_active_field_to_users_table.py  a6dd9121b01e_added.py  c40382f363be_uq_constraint_on_provider_staff.py  cc0bce69f763_init.py  cd4873ab0690_users_and_user_identities_tables.py  e2eb1d08bbc1_seller_staff_roles_table.py  eb6c928ef526_refactor_tables.py  fed0dfd32291_roles_and_permissions_tables.py
src/: config.py  constants.py  database.py  exceptions.py  main.py
src/admin/v1/: exceptions.py  repositories.py  router.py  schemas.py  services.py
src/auth/domain/: models.py
src/auth/v1/: config.py  dependencies.py  exceptions.py  handlers.py  models.py  repositories.py  router.py  schemas.py  services.py  types.py  utils.py  validators.py
src/common/: pagination.py  repositories.py
src/providers/v1/: exceptions.py  models.py  repositories.py  router.py  schemas.py  services.py  types.py
src/sellers/: repositories.py
tests/: conftest.py  utils.py
tests/admin/: test_endpoints.py
tests/auth/: test_endpoints.py
(+6 files in other folders)
