[project]
name = "e-commerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.2",
    "async-asgi-testclient>=1.4.11",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "docker>=7.1.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "python-dotenv>=1.1.0",
    "python-json-logger>=3.3.0",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "sqlalchemy[asyncio]>=2.0.40",
    "testcontainers>=4.10.0",
    "uvicorn>=0.34.2",
]
